upgpkg: osec 1.2.2cvs20081201-3 heimdal/openssl upd
git-svn-id: file:///srv/repos/svn-community/svn@14216 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=osec
 pkgver=1.2.2cvs20081201
-pkgrel=2
+pkgrel=3
 pkgdesc="lightweight integrity checking system"
 arch=(i686 x86_64)
 url="http://o-security.sourceforge.net/"
@@ -21,7 +21,7 @@ md5sums=('6b58726f1851909223b382dad03d7ceb')
 build() {
   cd $startdir/src/$pkgname-$pkgver
   sed -i 's#LDLIBS = -lcdbxx -lcrypto -lcap#LDLIBS = -lcdbxx -lcrypto -lcap -lcdb#' src/Makefile
-  make || return 1
+  make CFLAGS=-DBUFSIZ=8192 || return 1
   make DESTDIR=$startdir/pkg install || return 1
 
   install -D -m 0644 data/dirs.conf $startdir/pkg/etc/osec/dirs.conf && \
