--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -21,7 +21,8 @@ md5sums=('6b58726f1851909223b382dad03d7ceb')
 build() {
   cd $startdir/src/$pkgname-$pkgver
   sed -i 's#LDLIBS = -lcdbxx -lcrypto -lcap#LDLIBS = -lcdbxx -lcrypto -lcap -lcdb#' src/Makefile
-  make CFLAGS=-DBUFSIZ=8192 || return 1
+  sed -i 's#BUFSIZ#8192#' src/digest.cc
+  make || return 1
   make DESTDIR=$startdir/pkg install || return 1
 
   install -D -m 0644 data/dirs.conf $startdir/pkg/etc/osec/dirs.conf && \
