upgpkg: tls 1.6-3 OpenSSL 1.0.0 rebuild. Drop versioned dependency on openssl.
git-svn-id: file:///srv/repos/svn-community/svn@14340 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,12 +4,12 @@
 
 pkgname=tls
 pkgver=1.6
-pkgrel=2
+pkgrel=3
 pkgdesc="OpenSSL extension to Tcl"
 arch=('i686' 'x86_64')
 url="http://tls.sourceforge.net/"
 license=('GPL')
-depends=('tcl' 'openssl>=0.9.8b' 'awk')
+depends=('tcl' 'openssl' 'awk')
 source=(http://downloads.sourceforge.net/$pkgname/$pkgname$pkgver-src.tar.gz)
 md5sums=('eb326ff9e6fc3b9885aa5c72fb8df3bf')
 
