--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -8,11 +8,11 @@ pkgdesc="A complete audio and video production environment for Linux."
 arch=('i686' 'x86_64')
 url="http://cinelerra.org"
 license=('GPL')
-depends=('e2fsprogs' 'a52dec' 'fftw' 'lame' 'libavc1394' 'libiec61883' \
-	 'libraw1394' 'libsndfile' 'libvorbis' 'libogg' 'libpng>=1.4.0' \
-	 'libjpeg>=8' 'libtiff' 'esound' 'mjpegtools' 'openexr' 'x264' \
+depends=('e2fsprogs' 'a52dec' 'fftw' 'lame' 'libavc1394' 'libiec61883' 
+	 'libraw1394' 'libsndfile' 'libvorbis' 'libogg' 'libpng>=1.4.0' 
+	 'libjpeg>=8' 'libtiff' 'esound' 'mjpegtools' 'openexr' 'x264' 
 	 'libxxf86vm' 'ffmpeg' 'libxv' 'faad2' 'faac' 'libtheora')
-makedepends=('automake>=1.7' 'autoconf>=2.57' 'libtool' 'git' 'nasm' \
+makedepends=('automake>=1.7' 'autoconf>=2.57' 'libtool' 'git' 'nasm' 
 	     'libgl' 'mesa')
 optdepends=('libgl: needed for the X11-OPENGL video driver support')
 options=('!libtool')
