archrelease: copy trunk to community-testing-i686
git-svn-id: file:///srv/repos/svn-community/svn@14544 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/repos/community-x86_64/PKGBUILD
+++ b/repos/community-x86_64/PKGBUILD
@@ -2,14 +2,19 @@
 # Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=cinelerra-cv
-pkgver=20100313
+pkgver=20100404
 pkgrel=1
 pkgdesc="A complete audio and video production environment for Linux."
 arch=('i686' 'x86_64')
 url="http://cinelerra.org"
 license=('GPL')
-depends=('e2fsprogs' 'a52dec' 'fftw' 'lame' 'libavc1394' 'libiec61883' 'libraw1394' 'libsndfile' 'libvorbis' 'libogg' 'libpng>=1.4.0' 'libjpeg>=8' 'libtiff' 'esound' 'mjpegtools' 'openexr' 'x264' 'libxxf86vm' 'ffmpeg' 'libxv' 'faad2' 'faac' 'libtheora')
-makedepends=('automake>=1.7' 'autoconf>=2.57' 'libtool' 'git' 'nasm' 'libgl' 'mesa')
+depends=('e2fsprogs' 'a52dec' 'fftw' 'lame' 'libavc1394' 'libiec61883' 
+	 'libraw1394' 'libsndfile' 'libvorbis' 'libogg' 'libpng>=1.4.0' 
+	 'libjpeg>=8' 'libtiff' 'esound' 'mjpegtools' 'openexr' 'x264' 
+	 'libxxf86vm' 'ffmpeg' 'libxv' 'faad2' 'faac' 'libtheora')
+makedepends=('automake>=1.7' 'autoconf>=2.57' 'libtool' 'git' 'nasm' 
+	     'libgl' 'mesa')
+optdepends=('libgl: needed for the X11-OPENGL video driver support')
 options=('!libtool')
 source=(cinelerra-libavutil50.patch  cinelerra-pkgconfig-x264.patch  cinelerra-x264.patch libpng14.patch)
 md5sums=('fb4342dc5c640c8f73d7b4a780eee200'
@@ -21,7 +26,7 @@ _gitroot="git://git.cinelerra.org/j6t/cinelerra.git"
 _gitname="cinelerra"
 
 build() {
-  cd "$srcdir"
+  cd "${srcdir}"
   unset LDFLAGS
   msg "Connecting to GIT server...."
 
@@ -35,9 +40,9 @@ build() {
   msg "GIT checkout done or server timeout"
   msg "Starting make..."
 
-  rm -rf "$srcdir/$_gitname-build"
-  cp -r "$srcdir/$_gitname" "$srcdir/$_gitname-build"
-  cd "$srcdir/$_gitname-build"
+  rm -rf "${srcdir}/$_gitname-build"
+  cp -r "${srcdir}/$_gitname" "${srcdir}/$_gitname-build"
+  cd "${srcdir}/$_gitname-build"
 
 
   patch -Np1 -i ${srcdir}/cinelerra-libavutil50.patch || return 1
@@ -51,16 +56,16 @@ build() {
   ./autogen.sh
 
   if [ "$CARCH" = "x86_64" ]; then
-	  ./configure --prefix=/usr --with-buildinfo=git/recompile --with-external-ffmpeg --disable-mmx
+	  ./configure --prefix=/usr --with-buildinfo=git/recompile --with-external-ffmpeg --disable-mmx --enable-opengl
   else
-	  ./configure --prefix=/usr --with-buildinfo=git/recompile --with-external-ffmpeg --enable-mmx
+	  ./configure --prefix=/usr --with-buildinfo=git/recompile --with-external-ffmpeg --enable-mmx --enable-opengl
   fi
 
   make || return 1
 }
 
 package() {
-  cd "$srcdir/$_gitname-build"
+  cd "${srcdir}/$_gitname-build"
 
-  make DESTDIR=$pkgdir install
+  make DESTDIR=${pkgdir} install
 } 
