upgpkg: kadu 0.6.5.3-2 upd
git-svn-id: file:///srv/repos/svn-community/svn@14546 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=kadu
 pkgver=0.6.5.3
-pkgrel=1.1
+pkgrel=2
 pkgdesc="A Qt-based Gadu-Gadu client"
 arch=('i686' 'x86_64')
 url="http://www.kadu.net/"
@@ -33,7 +33,7 @@ build() {
     sed -r -i "s/^($m)=m/\1=n/" .config || return 1
   done
 
-  for p in $startdir/src/mod-*.diff; do 
+  for p in $startdir/src/mod-*.diff; do
     m=`basename $p .diff | sed 's/mod-\(.*\)/\1/'`
     mkdir -p modules/patches/$m
     cp $p modules/patches/$m
@@ -41,7 +41,9 @@ build() {
 
   sed 's#set (LIBDIR ${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX})#set (LIBDIR ${CMAKE_INSTALL_PREFIX}/lib)#' -i CMakeLists.txt
   sed 's#set (MODULEDIR lib${LIB_SUFFIX}/kadu/modules)#set (MODULEDIR lib/kadu/modules)#' -i CMakeLists.txt
- 
+
+  sed -i 's#module_phonon_sound=m#module_phonon_sound=n#' .config
+
   cmake . -DCMAKE_INSTALL_PREFIX=/usr
   make || return 1
   make DESTDIR=$pkgdir install || return 1
