luxblend25: prepare for 1.4 update.
git-svn-id: file:///srv/repos/svn-community/svn@127762 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,34 +1,32 @@
 # $Id$
 # Maintainer: Lukas Jirkovsky <l.jirkovsky@gmail.com>
 pkgname=luxblend25
-pkgver=1.3.1
-_pkgver=ad6536b0dda8
-_blender=2.72
-pkgrel=4
+pkgver=1.4
+_pkgver=a249c861c2f3
+_blender=2.73
+pkgrel=1
 pkgdesc="A LuxRender exporter for Blender."
 arch=('any')
 url="http://www.luxrender.net/"
 license=('GPL')
 depends=('blender' 'luxrender')
 source=(https://bitbucket.org/luxrender/luxblend25/get/$_pkgver.tar.bz2 \
-        luxrender_path.diff)
-md5sums=('389991810953df26f1d849db1c65a129'
-         'cea2a59336c28b84258e795f66301918')
-
-prepare() {
-  cd "$srcdir/luxrender-luxblend25-$_pkgver"
-
-  # set the default path to luxrender instalation, so the users doesn't have
-  # to do that everytime they enable luxrender
-  patch -Np1 < "$srcdir/luxrender_path.diff" || true
-}
+        luxrender.cfg)
+md5sums=('a9ca48c9d091df8dd55ba1b90d377ac2'
+         'ec6b7028e48f73650d9315d47cd14f1d')
 
 package() {
   install -d -m755 "$pkgdir"/usr/share/blender/$_blender/scripts/addons
   cp -a "$srcdir"/luxrender-luxblend25-$_pkgver/src/luxrender \
     "$pkgdir"/usr/share/blender/$_blender/scripts/addons
-  # change the search path in exporter so it finds pylux in its new location
-  sed -i 's|from.*import pylux|import pylux|' "$pkgdir/usr/share/blender/$_blender/scripts/addons/luxrender/outputs/pure_api.py"
+
+  # install luxrender config file so the luxblend find luxrender automatically
+  install -D -m644 luxrender.cfg \
+    "$pkgdir"/usr/share/blender/$_blender/config/luxrender.cfg
+
+  # change the search path for pylux* so the pylux* can be found in its new location
+  find "$pkgdir/usr/share/blender/$_blender/scripts/addons/luxrender" -name "*.py" \
+    -exec sed -i 's|from.*import pylux|import pylux|' '{}' ';'
 }
 
 # vim:set ts=2 sw=2 et:
