--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -16,8 +16,16 @@ optdepends=('opencl-nvidia: OpenCL support for nVidia GPUs' \
             'glew: demos (SmallLuxGPU etc.)' 'freeglut: demos (SmallLuxGPU etc.)' \
             'boost-libs: demos (SmallLuxGPU etc.)')
 options=('staticlibs')
-source=(https://bitbucket.org/luxrender/luxrays/get/${_pkgver}.tar.bz2)
-md5sums=('2dda3316fb2ae9be6e58b5fa3a35de62')
+source=(https://bitbucket.org/luxrender/luxrays/get/${_pkgver}.tar.bz2 \
+        force_python3.diff)
+md5sums=('2dda3316fb2ae9be6e58b5fa3a35de62'
+         '3bfb5594a709d1ea772866d66904b8fd')
+
+prepare() {
+  cd "$srcdir"/luxrender-luxrays-$_pkgver
+
+  patch -Np1 < "$srcdir/force_python3.diff" || true
+}
 
 build() {
   cd "$srcdir/luxrender-luxrays-$_pkgver"
@@ -36,6 +44,10 @@ package() {
   install -m755 bin/* "$pkgdir"/usr/bin
   install -m644 lib/* "$pkgdir"/usr/lib
   cp -a include "$pkgdir"/usr
+
+  # install pyluxcore to the Python search path
+  install -d -m755 "$pkgdir"/usr/lib/python3.4/
+  mv "$pkgdir"/usr/lib/pyluxcore.so "$pkgdir"/usr/lib/python3.4/
 }
 
 # vim:set ts=2 sw=2 et:
