--- a/repos/community-x86_64/PKGBUILD
+++ b/repos/community-x86_64/PKGBUILD
@@ -3,39 +3,34 @@
 # Contributor: flixie <69one@gmx.net>
 # Contributor: Imanol Celaya <ornitorrincos@archlinux-es.org>
 pkgname=luxrender
-pkgver=1.3.1
-_pkgver=d0b0e20c47cc
-pkgrel=11
+pkgver=1.4
+_pkgver=dfd211d6faa0
+pkgrel=1
 pkgdesc="Rendering system for physically correct, unbiased image synthesis"
 arch=('i686' 'x86_64')
 url="http://www.luxrender.net/"
 license=('GPL')
-depends=('boost-libs' 'freeimage' 'openexr' 'libpng' 'libcl' 'libgl' 'fftw')
+depends=('boost-libs' 'freeimage' 'openexr' 'openimageio' 'libpng' 'libcl' 'libgl' 'fftw')
 optdepends=('luxblend25: Blender exporter' 'qt4: Qt GUI' \
             'python: pylux Python interface'
             'opencl-nvidia: OpenCL support for nVidia GPUs' \
             'amdapp-sdk: OpenCL support for AMD GPUs' \
             'intel-opencl-runtime: OpenCL support for Intel CPUs')
-# luxrender is constantly broken due to various GCC bugs, the latest one being FS#40596
-makedepends=('cmake' 'boost' 'mesa' 'qt4' "luxrays=$pkgver" 'python' 'opencl-headers' 'clang')
-source=(https://bitbucket.org/luxrender/lux/get/$_pkgver.tar.bz2 \
+makedepends=('cmake' 'boost' 'mesa' 'qt4' "luxrays=$pkgver" 'python' 'opencl-headers')
+source=(https://bitbucket.org/luxrender/lux/get/${_pkgver}.tar.bz2 \
         force_python3.diff)
-md5sums=('cbe749f56a1e1976745f5458100efa8a'
+md5sums=('7591ac4e86d0232245af38f6cf932c02'
          '42692e65eabc5828693e2682e94b7c64')
 
 prepare() {
   cd "$srcdir"/luxrender-lux-$_pkgver
 
   patch -Np1 < "$srcdir/force_python3.diff" || true
-  # workaround QTBUG-22829
-  find . -type f -exec sed -i 's|^#include .*boost/.*|#ifndef Q_MOC_RUN\n&\n#endif|' '{}' ';'
 }
 
 build() {
   cd "$srcdir"/luxrender-lux-$_pkgver
 
-  export CC=clang
-  export CXX=clang++
 
   cmake -DCMAKE_INSTALL_PREFIX=/usr \
     -DLUXRAYS_DISABLE_OPENCL=OFF \
