--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -11,9 +11,17 @@ url="http://www.luxrender.net/"
 license=('GPL')
 depends=('blender' 'luxrender')
 source=(https://bitbucket.org/luxrender/luxblend25/get/$_pkgver.tar.bz2 \
-        luxrender.cfg)
+        system_config.diff luxrender.cfg)
 md5sums=('a9ca48c9d091df8dd55ba1b90d377ac2'
+         'f42e7bc5476b144cca60bf3e6363158a'
          'ec6b7028e48f73650d9315d47cd14f1d')
+
+prepare() {
+  cd "$srcdir"/luxrender-luxblend25-$_pkgver
+
+  # enables loading of the configuration from a system-wide config file
+  patch -Np1 < "$srcdir/system_config.diff" || true
+}
 
 package() {
   install -d -m755 "$pkgdir"/usr/share/blender/$_blender/scripts/addons
@@ -22,7 +30,7 @@ package() {
 
   # install luxrender config file so the luxblend find luxrender automatically
   install -D -m644 luxrender.cfg \
-    "$pkgdir"/usr/share/blender/$_blender/config/luxrender.cfg
+    "$pkgdir"/usr/share/blender/$_blender/scripts/luxrender.cfg
 
   # change the search path for pylux* so the pylux* can be found in its new location
   find "$pkgdir/usr/share/blender/$_blender/scripts/addons/luxrender" -name "*.py" \
