--- a/repos/community-any/PKGBUILD
+++ b/repos/community-any/PKGBUILD
@@ -10,8 +10,8 @@ url="http://www.archlinux.org"
 license=('GPL')
 depends=('appstream')
 makedepends=()
-source=("http://ftp.archlinux.org/other/community/archlinux-appstream-data/$pkgver/appstream.xml.gz" 
-"http://ftp.archlinux.org/other/community/archlinux-appstream-data/$pkgver/appstream-icons.tar.gz")
+source=("http://sources.archlinux.org/other/community/archlinux-appstream-data/$pkgver/appstream.xml.gz" 
+"http://sources.archlinux.org/other/community/archlinux-appstream-data/$pkgver/appstream-icons.tar.gz")
 install=$pkgname.install
 md5sums=('627b6619733d8ad2fcf12a0973478c66'
          '016baf1eb142266bc906784ec09db877')
