--- a/repos/community-i686/PKGBUILD
+++ b/repos/community-i686/PKGBUILD
@@ -4,12 +4,12 @@
 
 pkgname=kvpnc
 pkgver=0.9.6a
-pkgrel=5
+pkgrel=6
 pkgdesc="A KDE Desktop Environment frontend for various vpn clients"
 arch=(i686 x86_64)
 url="http://home.gna.org/kvpnc/"
 license=("GPL")
-depends=('kdelibs' 'hicolor-icon-theme')
+depends=('kdelibs' 'hicolor-icon-theme' 'net-tools')
 makedepends=('cmake' 'automoc4' 'optipng')
 install=kvpnc.install
 source=(http://download.gna.org/$pkgname/$pkgname-${pkgver}-kde4.tar.bz2
