--- a/repos/community-i686/PKGBUILD
+++ b/repos/community-i686/PKGBUILD
@@ -4,19 +4,19 @@
 # Contributor: Martin Sugioarto <nakal@web.de>
 
 pkgname=gimp-ufraw
-pkgver=0.20
-pkgrel=2
+pkgver=0.21
+pkgrel=1
 pkgdesc='Converter for raw files; utility and GIMP plugin'
 url='http://ufraw.sourceforge.net/'
 arch=('x86_64' 'i686')
 license=('GPL')
-depends=('gtkimageview' 'exiv2' 'lcms' 'bzip2' 'desktop-file-utils' 'cfitsio' 'lensfun')
+depends=('gtkimageview' 'exiv2' 'lcms' 'desktop-file-utils' 'cfitsio' 'lensfun')
 makedepends=('gimp' 'cinepaint')
 optdepends=('gimp: to use the gimp import plugin for raw images'
             'cinepaint: to use the cinepaint import plugin for raw images')
 install="$pkgname.install"
 source=("http://downloads.sourceforge.net/ufraw/ufraw-$pkgver.tar.gz")
-sha256sums=('6dcd30f73238f56641ec87ae07807a6ebeab141a1a481aafe3ddab6f3db8a1e0')
+sha256sums=('2a6a1bcc633bdc8e15615cf726befcd7f27ab00e7c2a518469a24e1a96964d87')
 
 prepare() {
   # One of the include files that comes with cinepaint looks for ../lib/wire/...
@@ -40,9 +40,7 @@ build() {
 }
 
 package() {
-  cd "ufraw-$pkgver"
-
-  make DESTDIR="$pkgdir" install
+  make -C "ufraw-$pkgver" DESTDIR="$pkgdir" install
   rm -f "$pkgdir/usr/bin/dcraw"
 }
 
