Use correct source
git-svn-id: file:///srv/repos/svn-community/svn@127861 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,26 +3,24 @@
 
 pkgname=libgap
 pkgver=4.7.7
-pkgrel=1
-_commit=5ba1da0ba339
+pkgrel=2
 pkgdesc="A C library version of the GAP kernel"
 arch=('i686' 'x86_64')
 url="https://bitbucket.org/vbraun/libgap"
 license=('GPL')
 depends=('gmp')
-source=("https://bitbucket.org/vbraun/libgap/get/5ba1da0ba339.zip")
-#source=("http://www.sagemath.org/packages/upstream/$pkgname/$pkgname-$pkgver.tar.gz")
-md5sums=('fa7838e4cd3fa61044137f1ed4b8fe8f')
+source=("http://boxen.math.washington.edu/home/vbraun/upstream/$pkgname-$pkgver.tar.gz")
+md5sums=('4486634a518ee5e8187988ebce47bd69')
 
 build() {
-  cd vbraun-libgap-$_commit
+  cd $pkgname-$pkgver
 
   ./configure --prefix=/usr
   make
 }
 
 package() {
-  cd vbraun-libgap-$_commit
+  cd $pkgname-$pkgver
   make install DESTDIR="$pkgdir"
 }
 
