--- a/repos/community-i686/PKGBUILD
+++ b/repos/community-i686/PKGBUILD
@@ -1,9 +1,9 @@
 # $Id$
-# Maintainer: Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
+# Maintainer: Jaroslav Lichtblau <svetlemodry@archlinux.org>
 # Contributor: Sven Pfleiderer <pfleidi@roothausen.de>
 
 pkgname=newsbeuter
-pkgver=2.8
+pkgver=2.9
 pkgrel=1
 pkgdesc="A RSS feed reader for the text console with special Podcast support"
 arch=('i686' 'x86_64')
@@ -15,7 +15,7 @@ optdepends=('ruby')
 install=$pkgname.install
 changelog=$pkgname.changelog
 source=(http://www.newsbeuter.org/downloads/$pkgname-$pkgver.tar.gz)
-sha256sums=('c872a068ec7792680b11126230dff240dee72acdab8f153016ba5ef83c8a7804')
+sha256sums=('74a8bf019b09c3b270ba95adc29f2bbe48ea1f55cc0634276b21fcce1f043dc8')
 
 build() {
   cd ${srcdir}/$pkgname-$pkgver
