--- a/repos/community-i686/PKGBUILD
+++ b/repos/community-i686/PKGBUILD
@@ -1,20 +1,21 @@
 # $Id$
-# Maintainer: Andrea Scarpino <andrea@archlinux.org>
+# Maintainer: Antonio Rojas <arojas@archlinux.org>
+# Contributor: Andrea Scarpino <andrea@archlinux.org>
 # Contributor: Kuba Serafinowski <zizzfizzix(at)gmail(dot)com>
 
 pkgname=kdeconnect
-pkgver=0.7.3
+pkgver=0.8
 pkgrel=1
 pkgdesc='Adds communication between KDE and your smartphone'
 url='https://projects.kde.org/projects/playground/base/kdeconnect-kde'
-license=('GPL')
-arch=('i686' 'x86_64')
-depends=('kdelibs' 'qjson' 'qca-ossl' 'libfakekey')
-makedepends=('automoc4' 'cmake')
+license=(GPL)
+arch=(i686 x86_64)
+depends=(kdebase-runtime qca-ossl libfakekey)
+makedepends=(automoc4 cmake)
 optdepends=('sshfs: remote filesystem browser')
 install="${pkgname}.install"
 source=("http://download.kde.org/unstable/${pkgname}/${pkgver}/src/${pkgname}-kde-${pkgver}.tar.xz")
-md5sums=('261e2b3412ed28e6f67e0ef2187b1854')
+md5sums=('7b84ebf785f44a1d022a1c0915555f5d')
 
 prepare() {
   mkdir build
