--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,16 +3,23 @@
 # Contributor: ConnorBehan <connor.behan@gmail.com>
 
 pkgname=sk1
-pkgver=0.9.2
+pkgver=0.9.3
 pkgrel=1
 pkgdesc="Fork of skencil with improved CMYK support"
 arch=(i686 x86_64)
 url="http://sk1project.org/modules.php?name=Products&product=sk1"
-depends=('tcl' 'tk' 'zenity' 'sk1libs' 'sk1sdk'
+depends=('tcl' 'tk' 'zenity'
 	 'python2-cairo' 'python2-lcms' 'python2-pillow')
 license=('GPL' 'LGPL')
-source=(http://downloads.sourceforge.net/project/sk1/sk1/sK1_v.$pkgver/sk1-$pkgver.tar.gz)
-md5sums=('60d505332b99c569204249e0b3b434c4')
+source=(http://downloads.sourceforge.net/project/sk1/sk1/sK1_v.$pkgver/sk1-$pkgver.tar.gz
+	python2-fix.patch)
+md5sums=('04cfbc5ffd4e25ae47a95b2e37cd8465'
+         'e560945a89c5445ce2f04960884a5f6b')
+
+prepare() {
+  cd $srcdir/sk1-${pkgver}
+  patch -p1 <$srcdir/python2-fix.patch
+}
 
 build() {
   cd $srcdir/sk1-${pkgver}
