--- a/repos/community-any/PKGBUILD
+++ b/repos/community-any/PKGBUILD
@@ -1,3 +1,4 @@
+# $Id$
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 # Maintainer: Moritz Lipp <mlq@pwmt.org>
 
@@ -5,12 +6,12 @@ _pipname=Flask-AutoIndex
 pkgbase=python-flask-autoindex
 pkgname=(python2-flask-autoindex python-flask-autoindex)
 pkgver=0.5
-pkgrel=1
+pkgrel=2
 pkgdesc="Flask-AutoIndex generates an index page for your Flask application automatically"
-arch=('any')
+arch=(any)
 url="http://packages.python.org/Flask-AutoIndex/"
-license=('BSD')
-makedepends=('python2-distribute' 'python2-flask' 'python-distribute' 'python-flask')
+license=(BSD)
+makedepends=(python2-setuptools python-setuptools)
 source=("https://pypi.python.org/packages/source/${_pipname:0:1}/$_pipname/$_pipname-0.5.tar.gz")
 md5sums=('24984602365704737468bb4d2586a739')
 
@@ -19,7 +20,7 @@ prepare() {
 }
 
 package_python2-flask-autoindex() {
-depends=('python2-flask')
+depends=(python2-flask-silk)
 
     cd python2-$_pipname-$pkgver
     python2 setup.py install --root="$pkgdir/" --optimize=1
@@ -29,7 +30,7 @@ depends=('python2-flask')
 }
 
 package_python-flask-autoindex() {
-depends=('python-flask')
+depends=(python-flask-silk)
 
     cd $_pipname-$pkgver 
     python setup.py install --root="$pkgdir/" --optimize=1
@@ -37,4 +38,3 @@ depends=('python-flask')
     mkdir -p "$pkgdir"/usr/share/licenses/$pkgname
     install -m644 LICENSE "$pkgdir"/usr/share/licenses/$pkgname
 }
-
