--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -36,6 +36,9 @@ package() {
 	cd "${srcdir}/${_pkgname}"
 	make DESTDIR="${pkgdir}" install
 
-	# remove conflicts with kdeedu-marble
-        rm -fr "${pkgdir}"/usr/{include,share/{appdata,icons}}
+	cd "${pkgdir}/usr"
+	mv include subsurface
+	install -d include
+	mv subsurface include
+        rm -fr share/{appdata,icons}
 }
