--- a/repos/community-i686/PKGBUILD
+++ b/repos/community-i686/PKGBUILD
@@ -8,7 +8,7 @@
 
 pkgname=pidgin-sipe
 pkgver=1.19.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Third-party Pidgin plugin for Microsoft Office 365/Lync/LCS/OCS"
 arch=('i686' 'x86_64')
 license=('GPL2')
@@ -16,8 +16,17 @@ url="http://sipe.sourceforge.net/"
 depends=('gmime' 'libpurple')
 makedepends=('intltool')
 options=('!buildflags')
-source=(http://downloads.sourceforge.net/project/sipe/sipe/$pkgname-$pkgver/$pkgname-$pkgver.tar.bz2)
-md5sums=('0022c30982527c9cf94e4ad0a162aa08')
+source=(http://downloads.sourceforge.net/project/sipe/sipe/$pkgname-$pkgver/$pkgname-$pkgver.tar.bz2
+        0001-Fix-278-488-error-after-libnice-upgrade.patch)
+md5sums=('0022c30982527c9cf94e4ad0a162aa08'
+         '5fe05bae567b8ff764b76e8a290b42cb')
+
+prepare() {
+  cd $pkgname-$pkgver
+
+  # https://sourceforge.net/p/sipe/bugs/278/
+  patch -Np1 -i ../0001-Fix-278-488-error-after-libnice-upgrade.patch
+}
 
 build() {
   cd $pkgname-$pkgver
