update upstream source
git-svn-id: file:///srv/repos/svn-community/svn@128099 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,6 @@
 # Maintainer: Gaetan Bisson <bisson@archlinux.org>
 
 pkgname=subsurface-marble
-_pkgname=marble
 pkgver=4.4.1
 pkgrel=1
 pkgdesc='Virtual Globe'
@@ -12,11 +11,11 @@ license=('GPL' 'LGPL' 'FDL')
 arch=('i686' 'x86_64')
 makedepends=('git' 'cmake')
 depends=('qt5-'{script,svg,tools,webkit})
-source=('git://git.subsurface-divelog.org/marble#commit=aa18d0af6951debf3a3a90916f3f772784dbf326')
-sha1sums=('SKIP')
+source=("http://subsurface-divelog.org/downloads/${pkgname}-${pkgver}.tgz")
+sha1sums=('4867a8219cd2dcf478414ad91ff4479ad2afc1a3')
 
 build() {
-	cd "${srcdir}/${_pkgname}"
+	cd "${srcdir}/${pkgname}"
 	cmake \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_BUILD_TYPE=Release \
@@ -33,7 +32,7 @@ build() {
 }
 
 package() {
-	cd "${srcdir}/${_pkgname}"
+	cd "${srcdir}/${pkgname}"
 	make DESTDIR="${pkgdir}" install
 
 	cd "${pkgdir}/usr"
