--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -9,7 +9,7 @@ pkgdesc='Virtual Globe'
 url='http://git.subsurface-divelog.org/'
 license=('GPL' 'LGPL' 'FDL')
 arch=('i686' 'x86_64')
-makedepends=('git' 'cmake')
+makedepends=('cmake')
 depends=('qt5-'{script,svg,tools,webkit})
 source=("http://subsurface-divelog.org/downloads/${pkgname}-${pkgver}.tgz")
 sha1sums=('4867a8219cd2dcf478414ad91ff4479ad2afc1a3')
