--- a/repos/community-any/PKGBUILD
+++ b/repos/community-any/PKGBUILD
@@ -3,9 +3,9 @@
 # Maintainer: Evgeniy Alekseev <arcanis.arch at gmail dot com>
 
 pkgname=sage-notebook
-pkgver=0.11.1
-pkgrel=4
-pkgdesc='Web-based notebook interface for Sage'
+pkgver=0.11.4
+pkgrel=1
+pkgdesc='Browser-based notebook interface for Sage'
 arch=('any')
 url='http://www.sagemath.org'
 license=('GPL3')
@@ -14,7 +14,7 @@ optdepends=('python2-pyopenssl: to use the notebook in secure mode')
 makedepends=('gendesk')
 source=("https://github.com/sagemath/sagenb/archive/$pkgver.tar.gz" 'sage.service' 'jmol.patch')
 install=$pkgname.install
-md5sums=('74d9ddd0f1b77ff8ef9d0f5b0007cf00'
+md5sums=('e8e0495d3668735c4ec2abc157c17f6b'
          '61620179a7ecd85401d8e5a6ece3ea41'
          'b29760c97a5328faa179a46008391bf0')
 
