--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,12 +4,13 @@
 
 pkgname=sk1
 pkgver=0.9.3
-pkgrel=1
+pkgrel=2
 pkgdesc="Fork of skencil with improved CMYK support"
 arch=(i686 x86_64)
 url="http://sk1project.org/modules.php?name=Products&product=sk1"
 depends=('tcl' 'tk' 'zenity'
 	 'python2-cairo' 'python2-lcms' 'python2-pillow')
+provides=('sk1sdk' 'sk1libs')
 license=('GPL' 'LGPL')
 source=(http://downloads.sourceforge.net/project/sk1/sk1/sK1_v.$pkgver/sk1-$pkgver.tar.gz
 	python2-fix.patch)
