--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -9,7 +9,7 @@
 
 pkgname=freecad
 pkgver=0.14.3702
-pkgrel=4
+pkgrel=5
 pkgdesc='A general purpose 3D CAD modeler'
 arch=('i686' 'x86_64')
 url='http://www.freecadweb.org/'
@@ -37,9 +37,8 @@ prepare() {
 
 build() {
   cd "${srcdir}/freecad-${pkgver}/"
-  mkdir -p build
-  cd build
-  cmake .. \
+  cmake \
+    -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX:PATH="/usr" \
     -DCMAKE_INSTALL_DOCDIR:PATH="share/freecad/doc" \
     -DCMAKE_INSTALL_DATADIR:PATH="share/freecad" \
@@ -51,7 +50,7 @@ build() {
 }
 
 package() {
-  cd "${srcdir}/freecad-${pkgver}/build"
+  cd "${srcdir}/freecad-${pkgver}"
   make DESTDIR="${pkgdir}" install
 
   # Symlink to /usr/bin
