--- a/repos/community-i686/PKGBUILD
+++ b/repos/community-i686/PKGBUILD
@@ -5,12 +5,12 @@
 
 pkgname=xfe
 pkgver=1.40
-pkgrel=1
+pkgrel=2
 pkgdesc="X File Explorer (Xfe) is an MS-Explorer like file manager for X."
 arch=('i686' 'x86_64')
 url="http://roland65.free.fr/xfe"
 license=("GPL")
-depends=('fox')
+depends=('fox>=1:1.6' 'fox<1:1.7')
 makedepends=('intltool')
 source=(http://downloads.sourceforge.net/sourceforge/$pkgname/$pkgname-$pkgver.tar.gz)
 md5sums=('09854d424fd9e602b21aa3a363f3b5b7')
