--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -6,7 +6,7 @@
 
 pkgname=docky
 pkgver=2.2.0
-pkgrel=3
+pkgrel=4
 pkgdesc="Full fledged dock application that makes opening common applications and managing windows easier and quicker"
 url="http://wiki.go-docky.com/"
 arch=('any')
@@ -15,11 +15,13 @@ depends=('gconf-sharp' 'gkeyfile-sharp' 'gnome-keyring-sharp' 'librsvg' 'mono-ad
 makedepends=('intltool' 'gio-sharp')
 install=$pkgname.install
 source=("http://launchpad.net/$pkgname/2.2/$pkgver/+download/$pkgname-$pkgver.tar.xz"
+         use_dbussharp_2.patch
          fix-build.patch
          systemd-support.patch
          drop-gnome-desktop-sharp.patch
          drop-rsvg2-sharp.patch)
 md5sums=('519fa5920a590a680afd8a87d0db9db5'
+         '42553efbadb9dcf8c108ee9d8d568b2e'
          'a78989892dfb660600c5f63a6df90f37'
          'a9670aef62793386b058a26d78d25005'
          'c19568dde9351e258e1d2e3ef2e7dddc'
@@ -39,6 +41,9 @@ prepare() {
 
   # Remove rsvg2-sharp dependency
   patch -Np0 -i ../drop-rsvg2-sharp.patch
+
+  # dbus-sharp 2.0
+  patch -Np1 -i ../use_dbussharp_2.patch
 }
 
 build() {
