--- a/repos/community-any/PKGBUILD
+++ b/repos/community-any/PKGBUILD
@@ -8,14 +8,14 @@
 pkgbase=smuxi
 pkgname=('smuxi-server' 'smuxi')
 pkgver=0.11
-pkgrel=1
+pkgrel=2
 pkgdesc="User-friendly and cross-platform IRC client for sophisticated users for GNOME/GTK+"
 arch=('any')
-url="http://www.smuxi.org/"
+url="https://smuxi.im/"
 license=('GPL')
 makedepends=('notify-sharp' 'log4net' 'nini' 'gtkspell' 'stfl' 'intltool')
 options=('!emptydirs')
-source=(http://www.smuxi.org/jaws/data/files/$pkgbase-$pkgver.tar.gz)
+source=(https://smuxi.im/jaws/data/files/$pkgbase-$pkgver.tar.gz)
 md5sums=('a65d5ab884c85b2e11ece2c1a23148d5')
 
 build() {
