db-move: moved notify-sharp from [community-staging] to [community] (any)
git-svn-id: file:///srv/repos/svn-community/svn@128269 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/repos/community-any/PKGBUILD
+++ b/repos/community-any/PKGBUILD
@@ -5,19 +5,27 @@
 
 pkgname=notify-sharp
 pkgver=0.4.1
-pkgrel=1
-pkgdesc="C D-Bus client library for desktop notifications"
+pkgrel=2
+pkgdesc="C Sharp D-Bus client library for desktop notifications"
 arch=('any')
 url="https://www.meebey.net/projects/notify-sharp/"
 license=('MIT')
 depends=('gtk-sharp-2' 'dbus-sharp-glib') 
 provides=('notify-sharp-svn')
 replaces=('notify-sharp-svn')
-source=(https://www.meebey.net/projects/notify-sharp/downloads/$pkgname-$pkgver.tar.gz)
-md5sums=('46fcb7a6b9b1cd0241366b8234e31e37')
+source=(https://www.meebey.net/projects/notify-sharp/downloads/$pkgname-$pkgver.tar.gz
+        use_dbussharp_2.pc)
+md5sums=('46fcb7a6b9b1cd0241366b8234e31e37'
+         '2018c4612d301c84b6cc8f6f7dd38155')
+
+prepare() {
+  cd $pkgname-$pkgver
+  patch -Np1 -i ../use_dbussharp_2.pc
+}
 
 build() {
   cd "$srcdir/$pkgname-$pkgver"
+  autoreconf -fi
   ./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var
   make
 }
