--- a/repos/community-i686/PKGBUILD
+++ b/repos/community-i686/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=gnome-do
 pkgver=0.95.3
-pkgrel=1
+pkgrel=2
 pkgdesc="Quickly search for many items present on your desktop or the web, and perform useful actions on those items"
 arch=('i686' 'x86_64')
 url="http://do.cooperteam.net/"
@@ -14,8 +14,10 @@ depends=('gconf-sharp' 'gnome-desktop2' 'gnome-keyring-sharp' 'mono-addins' 'not
 makedepends=('intltool' 'gio-sharp')
 install=$pkgname.install
 source=(http://launchpad.net/do/trunk/$pkgver/+download/$pkgname-$pkgver.tar.gz
+        03_dbus_sharp_2.diff
         fix-build.patch)
 md5sums=('698ff640c8b54565725e9f836384c894'
+         '4629501823d94099fbb9d613913839a6'
          '4ac79a8270bc6c1539f56b8f56043894')
 
 prepare() {
@@ -23,10 +25,14 @@ prepare() {
 
   # Fix build
   patch -Np1 -i ../fix-build.patch
+
+  # Use dbus-sharp-2
+  patch -Np1 -i ../03_dbus_sharp_2.diff
 }
 
 build() {
   cd $pkgname-$pkgver
+  autoreconf -fi
   ./configure --prefix=/usr --sysconfdir=/etc \
               --disable-schemas-install \
               --with-gconf-schema-file-dir=/usr/share/gconf/schemas
