--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -17,7 +17,9 @@ build() {
   cd $pkgname-$pkgver
   cmake -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr \
-    -DCMAKE_INSTALL_LIBDIR=/usr/lib
+    -DCMAKE_INSTALL_LIBDIR=/usr/lib \
+    -DDISABLE_EXAMPLES=ON \
+    -DDISABLE_TESTS=ON
   make
 }
 
