--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,24 +4,24 @@
 # Contributor: Jaroslaw Swierczynski <swiergot@aur.archlinux.org>
 
 pkgname=kadu
-pkgver=1.5
+pkgver=2.0
 pkgrel=1
 pkgdesc='Qt-based Jabber/XMPP and Gadu-Gadu client'
 arch=('i686' 'x86_64')
 url='http://www.kadu.net/'
 license=('GPL')
-depends=('libgadu' 'libxss' 'enchant' 'phonon' 'qca-ossl' 'libidn'
-         'libmpdclient' 'qtwebkit' 'xdg-utils' 'libotr' 'libarchive')
-makedepends=('cmake' 'libao' 'libsndfile' 'libxtst' 'curl' 'chrpath' 'ninja')
+depends=('libgadu' 'libxss' 'enchant' 'phonon-qt5' 'qca-ossl' 'qca-qt5' 'libidn'
+         'libmpdclient' 'libotr' 'libarchive' 'injeqt' 'xdg-utils' 'qt5-multimedia'
+         'qt5-quick1' 'qt5-declarative' 'qt5-webkit' 'qt5-x11extras')
+makedepends=('cmake' 'libao' 'libsndfile' 'libxtst' 'curl' 'chrpath' 'ninja'
+             'qt5-tools')
 install=kadu.install
-source=(http://download.kadu.im/stable/$pkgname-$pkgver.tar.bz2
-        kadu-1.5-Rename-INSTALL-PREFIX-to-KADU_INSTALL_PREFIX.patch)
-md5sums=('bfc653bc3a5b542877a299209db6adaf'
-         'd706ee1839c629bc8cb06153211b2630')
+source=(http://download.kadu.im/stable/$pkgname-$pkgver.tar.bz2)
+md5sums=('7239fab871f32082a7cf27433219b08b')
 
 prepare() {
-  cd $pkgname-$pkgver
-  patch -p1 -i ../kadu-1.5-Rename-INSTALL-PREFIX-to-KADU_INSTALL_PREFIX.patch
+  sed -i 's/unity_integration//g' $pkgname-$pkgver/Plugins.cmake
+  sed -i 's/indicator_docking//g' $pkgname-$pkgver/Plugins.cmake
 }
 
 build() {
