archrelease: copy trunk to community-any
git-svn-id: file:///srv/repos/svn-community/svn@128362 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/repos/community-any/PKGBUILD
+++ b/repos/community-any/PKGBUILD
@@ -5,20 +5,21 @@
 _targets="i686-w64-mingw32 x86_64-w64-mingw32"
 
 pkgname=mingw-w64-crt
-pkgver=3.3.0
+pkgver=4.0rc2
+_pkgver=4.0-rc2
 pkgrel=1
 pkgdesc='MinGW-w64 CRT for Windows'
 arch=('any')
 url='http://mingw-w64.sourceforge.net'
 license=('custom')
 groups=('mingw-w64-toolchain' 'mingw-w64')
-makedepends=('mingw-w64-gcc-base' 'mingw-w64-binutils' 'mingw-w64-headers')
+makedepends=('mingw-w64-gcc' 'mingw-w64-binutils' 'mingw-w64-headers')
 options=('!strip' '!buildflags' 'staticlibs' '!emptydirs')
-source=(http://sourceforge.net/projects/mingw-w64/files/mingw-w64/mingw-w64-release/mingw-w64-v${pkgver}.tar.bz2)
-md5sums=('3c56901ca7be60beba6d58caff168240')
+source=(http://sourceforge.net/projects/mingw-w64/files/mingw-w64/mingw-w64-release/mingw-w64-v${_pkgver}.tar.bz2)
+md5sums=('e08c4c0265c0e97f514695a1fa57af9e')
 
 prepare() {
-  cd ${srcdir}/mingw-w64-v${pkgver}/mingw-w64-crt
+  cd ${srcdir}/mingw-w64-v${_pkgver}/mingw-w64-crt
   aclocal
   automake
 }
@@ -33,7 +34,7 @@ build() {
         _crt_configure_args="--disable-lib32 --enable-lib64"
     fi
     mkdir -p ${srcdir}/crt-${_target} && cd ${srcdir}/crt-${_target}
-    ${srcdir}/mingw-w64-v${pkgver}/mingw-w64-crt/configure --prefix=/usr/${_target} \
+    ${srcdir}/mingw-w64-v${_pkgver}/mingw-w64-crt/configure --prefix=/usr/${_target} \
         --host=${_target} --enable-wildcard \
         ${_crt_configure_args}
     make
