--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -6,27 +6,19 @@ pkgrel=8
 arch=('i686' 'x86_64')
 license=(GPL)
 pkgdesc="Webcam application for linux"
-# version of CImg library needed to compile wxcam -
-# http://cimg.sourceforge.net/
-_CImg_ver=1.5.8
 url="http://wxcam.sourceforge.net"
 makedepends=('intltool>=0.35.0' 'libsm')
-depends=('libglade' 'mjpegtools' 'perl-xml-parser' 'wxgtk' 'xvidcore' 'v4l-utils' 'alsa-lib')
-source=(wxcam.tar.gz::"http://wxcam.cvs.sourceforge.net/viewvc/wxcam/wxcam/?view=tar"
-	    http://downloads.sourceforge.net/cimg/CImg-${_CImg_ver}.zip)
-md5sums=('5f7058b199b93e9e3d94bca6166c1f46'
-         '4941a3959f790ee68326403da1ed6dc7')
-
-prepare() {
-    cp "$srcdir"/CImg-${_CImg_ver}/CImg.h "$srcdir"/$pkgname-$pkgver
-}
+depends=('libglade' 'mjpegtools' 'perl-xml-parser' 'wxgtk' 'xvidcore' 'v4l-utils' 'alsa-lib' 'cimg')
+source=(wxcam.tar.gz::"http://wxcam.cvs.sourceforge.net/viewvc/wxcam/wxcam/?view=tar")
+md5sums=('5f7058b199b93e9e3d94bca6166c1f46')
 
 build() {
     cd "$srcdir"/$pkgname
-    #sed -i "s/DEFAULTCONF.*/DEFAULTCONF=Release/g" nbproject/Makefile-impl.mk
+    sed -i "s/^DEFAULTCONF.*$/DEFAULTCONF=Release/g" nbproject/Makefile-impl.mk
     make
 }
 
 package() {
     cd "$srcdir"/$pkgname
+    install -Dm755 bin/wxcam "$pkgdir"/usr/bin/wxcam
 }
