--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -6,7 +6,7 @@ _pkgbasename=nvidia-340xx-utils
 pkgbase=lib32-$_pkgbasename
 pkgname=('lib32-nvidia-340xx-utils' 'lib32-nvidia-340xx-libgl' 'lib32-opencl-nvidia-340xx')
 pkgver=340.76
-pkgrel=1
+pkgrel=2
 arch=('x86_64')
 url="http://www.nvidia.com/"
 license=('custom')
@@ -45,7 +45,7 @@ package_lib32-opencl-nvidia-340xx() {
     create_links
 
     mkdir -p "${pkgdir}/usr/share/licenses"
-    ln -s $_pkgbasename "${pkgdir}/usr/share/licenses/lib32-opencl-nvidia"
+    ln -s nvidia "${pkgdir}/usr/share/licenses/lib32-opencl-nvidia"
 }
 
 package_lib32-nvidia-340xx-libgl() {
@@ -73,7 +73,7 @@ package_lib32-nvidia-340xx-libgl() {
     ln -s "libGLESv2.so.${pkgver}" "${pkgdir}/usr/lib32/libGLESv2.so"
 
     mkdir -p "${pkgdir}/usr/share/licenses"
-    ln -s $_pkgbasename "${pkgdir}/usr/share/licenses/lib32-nvidia-libgl"
+    ln -s nvidia "${pkgdir}/usr/share/licenses/lib32-nvidia-libgl"
 }
 
 package_lib32-nvidia-340xx-utils() {
@@ -115,5 +115,5 @@ package_lib32-nvidia-340xx-utils() {
 
     rm -rf "${pkgdir}"/usr/{include,share,bin}
     mkdir -p "${pkgdir}/usr/share/licenses"
-    ln -s $_pkgbasename "${pkgdir}/usr/share/licenses/${pkgname}"
+    ln -s nvidia "${pkgdir}/usr/share/licenses/${pkgname}"
 }
