fix file names to avoid shared source cache conflicts
git-svn-id: file:///srv/repos/svn-community/svn@128531 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -10,7 +10,8 @@ url="http://github.com/juergenhoetzel/pkgbuild-mode"
 license=('GPL')
 depends=('emacs')
 install=emacs-pkgbuild-mode.install
-source=(https://github.com/juergenhoetzel/pkgbuild-mode/tarball/${pkgver} emacs-pkgbuild-mode-template.patch)
+source=($pkgname-$pkgver.tar.gz::https://github.com/juergenhoetzel/pkgbuild-mode/tarball/${pkgver}
+	emacs-pkgbuild-mode-template.patch)
 sha1sums=('2f0a658bef68801b50faac4fb746c895ed8ea672'
           'a7059f87095970a8fc2b954ec7420aae72a00995')
 
