fix file names to avoid shared source cache conflicts
git-svn-id: file:///srv/repos/svn-community/svn@128532 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -9,7 +9,7 @@ url='https://github.com/thestinger/hardening-wrapper'
 license=('MIT')
 depends=(bash)
 backup=(etc/hardening-wrapper.conf)
-source=("https://github.com/thestinger/hardening-wrapper/archive/$pkgver.tar.gz"
+source=("$pkgname-$pkgver.tar.gz::https://github.com/thestinger/hardening-wrapper/archive/$pkgver.tar.gz"
         path.sh hardening-wrapper-i686.conf hardening-wrapper-x86_64.conf)
 sha1sums=('6ed61cb69f5f756cb45e5b894fce8abdfa35f99c'
           '1e5f6d9931f01b26bb4b6fbb839e21d34d534cdc'
