fix file names to avoid shared source cache conflicts
git-svn-id: file:///srv/repos/svn-community/svn@128532 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -16,7 +16,7 @@ optdepends=('opencl-nvidia: OpenCL support for nVidia GPUs' \
             'glew: demos (SmallLuxGPU etc.)' 'freeglut: demos (SmallLuxGPU etc.)' \
             'boost-libs: demos (SmallLuxGPU etc.)')
 options=('staticlibs')
-source=(https://bitbucket.org/luxrender/luxrays/get/${_pkgver}.tar.bz2 \
+source=($pkgname-$pkgver.tar.bz2::https://bitbucket.org/luxrender/luxrays/get/${_pkgver}.tar.bz2 \
         force_python3.diff)
 md5sums=('2dda3316fb2ae9be6e58b5fa3a35de62'
          '3bfb5594a709d1ea772866d66904b8fd')
