fix file names to avoid shared source cache conflicts
git-svn-id: file:///srv/repos/svn-community/svn@128532 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -10,7 +10,7 @@ url='https://github.com/vogel/injeqt'
 license=('LGPL2.1')
 depends=('qt5-base')
 makedepends=('cmake')
-source=($url/archive/$pkgver.tar.gz)
+source=($pkgname-$pkgver.tar.gz::$url/archive/$pkgver.tar.gz)
 md5sums=('5f9211d7731c6b7e7c4e6943445fb379')
 
 build() {
