fix file names to avoid shared source cache conflicts
git-svn-id: file:///srv/repos/svn-community/svn@128533 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -20,7 +20,7 @@ optdepends=('lsof: device processes'
             'udevil: mount as non-root user and mount networks'
             'udisks: mount as non-root user'
             'udisks2: mount as non-root user')
-source=(https://github.com/IgnorantGuru/spacefm/archive/$pkgver.tar.gz
+source=($pkgname-$pkgver.tar.gz::https://github.com/IgnorantGuru/spacefm/archive/$pkgver.tar.gz
         spacefm-0.9.4-glib-2.41.patch)
 md5sums=('daeee7dcccea33d6258a0a9d783470c4'
          '1ec85afcb4fc881a8e876b3cf60c7028')
