fix file names to avoid shared source cache conflicts
git-svn-id: file:///srv/repos/svn-community/svn@128533 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -13,7 +13,7 @@ depends=(sage-mathematics python2-twisted python2-flask-oldsessions python2-flas
 python2-webassets mathjax)
 optdepends=('python2-pyopenssl: to use the notebook in secure mode')
 makedepends=(gendesk)
-source=("https://github.com/sagemath/sagenb/archive/$pkgver.tar.gz" 'sage.service' 'jmol.patch')
+source=("$pkgname-$pkgver.tar.gz::https://github.com/sagemath/sagenb/archive/$pkgver.tar.gz" 'sage.service' 'jmol.patch')
 install=$pkgname.install
 md5sums=('e8e0495d3668735c4ec2abc157c17f6b'
          '61620179a7ecd85401d8e5a6ece3ea41'
