fix file names to avoid shared source cache conflicts
git-svn-id: file:///srv/repos/svn-community/svn@128533 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -13,7 +13,7 @@ arch=('any')
 url="http://ninja-ide.org/"
 license=('GPL3')
 depends=('python2-setuptools' 'python2-pyqt' 'python2-pyinotify')
-source=(https://github.com/ninja-ide/ninja-ide/archive/v$pkgver.zip
+source=($pkgname-$pkgver.zip::https://github.com/ninja-ide/ninja-ide/archive/v$pkgver.zip
         ninja-ide.desktop)
 install=$pkgname.install
 sha256sums=('489fd2aede8fc16a1216a245e095f00865e0b91e8b0369f023041984f1b62a06'
