fix file names to avoid shared source cache conflicts
git-svn-id: file:///srv/repos/svn-community/svn@128533 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -10,7 +10,7 @@ arch=('any')
 url="http://www.robelix.com/sub2srt/"
 license=('GPL')
 depends=('perl')
-source=(https://github.com/robelix/sub2srt/archive/$pkgver.tar.gz)
+source=($pkgname-$pkgver.tar.gz::https://github.com/robelix/sub2srt/archive/$pkgver.tar.gz)
 md5sums=('5c1aec7c2be9010549f0bab826bcf942')
 
 package() {
