fix file names to avoid shared source cache conflicts
git-svn-id: file:///srv/repos/svn-community/svn@128533 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -14,7 +14,7 @@ license=('GPL')
 depends=('chmlib' 'python2')
 makedepends=('python2-setuptools')
 replaces=('python-pychm=0.8.4')
-source=(https://github.com/dottedmag/pychm/archive/v$pkgver.tar.gz)
+source=($pkgname-$pkgver.tar.gz::https://github.com/dottedmag/pychm/archive/v$pkgver.tar.gz)
 md5sums=('730c484583c14350e55dba1aa1b03360')
 
 package() {
