fix file names to avoid shared source cache conflicts
git-svn-id: file:///srv/repos/svn-community/svn@128534 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -11,7 +11,7 @@ url="https://github.com/nanotech/$_name"
 license=('MIT')
 groups=('vim-plugins')
 depends=('vim')
-source=("https://github.com/nanotech/$_name/archive/v$pkgver.zip")
+source=("$pkgname-$pkgver.zip::https://github.com/nanotech/$_name/archive/v$pkgver.zip")
 sha256sums=('5a6ec1d4d722b3db7b7f0a3cddc4f752f5eb915e76fe34471444d4c554883d52')
 
 prepare() {
